cluster/apps/default/prowlarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
spec:
  replicas: 1
  revisionHistoryLimit: 0
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: prowlarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: prowlarr
    spec:
      containers:
      - name: prowlarr
        image: linuxserver/prowlarr:develop-version-1.7.4.3769 # {"$imagepolicy": "flux-system:prowlarr"}
        ports:
        - containerPort: 9696
        readinessProbe:
          tcpSocket:
            port: 9696
          initialDelaySeconds: 60
          timeoutSeconds: 10
          failureThreshold: 3
        livenessProbe:
          tcpSocket:
            port: 9696
          initialDelaySeconds: 60
          timeoutSeconds: 10
          failureThreshold: 3
        volumeMounts:
        - mountPath: /config
          name: config-volume
      volumes:
      - name: config-volume
        persistentVolumeClaim:
          claimName: prowlarr-config
